cros: Change GURL back to std::string in SetOnlineWallpaper

This CL is exactly the revert of the diff between patch 6 and 7 of
CL 1013211:
https://chromium-review.googlesource.com/c/chromium/src/+/1013211/6..7

It was assumed that GURL and std::string are equivalent for this use
case. However GURL converts spaces in urls to "%20", therefore
wallpaper_manager.js fails to use the url to find the currently set
wallpaper. It's observed that this issue is only reproducible for
wallpapers whose urls have space.

Think it makes sense to use std::string since the url is not used for
downloading purpose. (Using url as wallpaper id is not the best
solution IMO, but changing it is a separate task.)

Bug: 846264
Change-Id: Ie83b6d9e95dccbe44dd8fca8c0843a85fcfd9758
Reviewed-on: https://chromium-review.googlesource.com/1072700
Reviewed-by: Sam McNally <sammc@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562003}
Former-commit-id: 5083e4c720b5c648dc8261a8f7c56e1f9f5749b8